--- a/Menu.html
+++ b/Menu.html
@@ -1,4 +1,4 @@
-<html xmlns:v-bind="http://www.w3.org/1999/xhtml" xmlns:v-on="http://www.w3.org/1999/xhtml">
+<html>
 <head>
     <link rel="stylesheet" href="Menu.css">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
